--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    /* Better text styling */
+    font: bold 14px Arial, sans-serif;
+}
+html {
+    height: 100%;
+    background: white;
+    background: radial-gradient(circle, #fff 20%, #ccc);
+    background-size: cover;
+}
 body {
-    background-color:lightblue;
+
 }
 h5 {
     font-size: 75px;
