--- a/style.css
+++ b/style.css
@@ -32,12 +32,13 @@ html {
     position:relative;
     top:20px;
     height:100px;
-    font-size: 70px;
+    font-size: 60px;
     text-align: right;
     overflow: auto;
     margin: auto;
     border-radius: 3px;
     padding-top: 10px;
+    box-shadow: inset 0 4px rgba(0, 0, 0, 0.2);
 }
 
 .button_keys {
