--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
       padding: 0;
       box-sizing: border-box;
       font: bold 14px Montserrat, sans-serif;
-  }
+}
 
 html {
     height: 100%;
@@ -15,12 +15,11 @@ html {
 .calculator {
     background-color: #2e3432;
     height: auto;
-    max-width:400px;
-    min-width: 300px;
+    width: 420px;
     border-radius:5px;
     position:relative;
     margin: auto;
-    top: 20vh;
+    top: 15vh;
     padding: 5px 5px 15px 5px;
     box-shadow: 0 4px #009de4, 0 10px 15px rgba(0, 0, 0, 0.2);
 }
@@ -32,7 +31,7 @@ html {
     position:relative;
     top:20px;
     height:100px;
-    font-size: 60px;
+    font-size: 4.5em;
     text-align: right;
     overflow: auto;
     margin: auto;
@@ -42,11 +41,12 @@ html {
 }
 
 .button_keys {
-    width:20%;
+    width:23%;
     height:60px;
-    font-size: 42px;
+    font-size: 3em;
+    line-height: 1em;
     border:none;
-    margin: 10px 8px 10px 8px;
+    margin: 10px 2px 10px 2px;
     cursor:pointer;
     border-top:2px solid transparent;
     color:white;
@@ -66,12 +66,8 @@ html {
 
 .clear {
     background-color: #4284f3;
-    margin: 40px 8px 10px 8px;
-}
-
-.clear_entry {
-    background-color: #4284f3;
-    margin: 40px 8px 10px 8px;
+    margin: 40px 2px 0 2px;
+    left: 75%;
 }
 
 .button_keys:hover{
@@ -79,7 +75,15 @@ html {
     box-shadow: 0 8px #6b54d3;
     color: black;
 }
+
 .button_keys:active{
     box-shadow: 0 0 #6b54d3;
     top: 4px;
+}
+
+@media (max-width: 375px) {
+    .calculator {
+        top: 10vh;
+        width: 360px;
+    }
 }
